JNG-6232 Orginize opened dialog forms by fq name